--- a/assets/app.css
+++ b/assets/app.css
@@ -44,3 +44,26 @@
     font-size: 21px;
     font-weight: bold;
 }
+
+/**
+  Input section
+ */
+
+.input-wrapper{
+    /*background-color: lightgrey;*/
+    height: 200px;
+    width: 100vw;
+}
+
+#input_example {
+    height: 30px;
+    width: 200px;
+    margin-left: 30px;
+}
+
+#output_for_input {
+    height: 50px;
+    width: 400px;
+    margin-left: 30px;
+    margin-top: 30px;
+}
